<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="32sp"
        android:text="@string/welcomeString"
        android:textColor="@color/colorWelcome"
        android:textFontWeight="700"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="145dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="25sp"
        android:text="@string/pleaseString"
        android:textColor="@color/colorPlease"
        android:textFontWeight="500"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="8dp"/>

    <EditText
        android:paddingStart="20dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="18.15sp"
        android:inputType="textEmailAddress"
        android:hint="@string/accountString"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter_regular"
        android:background="@drawable/form_input_design"
        android:drawableStart="@drawable/mail_vector"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:paddingStart="20dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="18.15sp"
        android:inputType="textPassword"
        android:hint="@string/passwordString"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter_regular"
        android:background="@drawable/form_input_design"
        android:drawableStart="@drawable/password_vector"
        android:drawableEnd="@drawable/hide_vector"
        android:paddingEnd="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:text="@string/forgotPasswordString"
        android:textSize="17sp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_regular"
        android:layout_marginLeft="95dp"
        android:textColor="@color/colorWelcome"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTwoString"
        android:textAllCaps="false"
        android:padding="18dp"
        app:cornerRadius="30dp"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/colorGreen"
        android:elevation="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorWhite"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withString"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        android:textColor="@color/colorWith"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/googleString"
        android:textAllCaps="false"
        android:padding="18dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        app:cornerRadius="30dp"
        app:backgroundTint="@color/colorOrange"
        app:icon="@drawable/google"
        app:iconGravity="textStart"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:lineHeight="25sp"
            android:text="@string/haventAccaountString"
            android:textColor="@color/colorWelcome"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signTextButton"
            android:text="@string/signString"
            android:textSize="17sp"
            android:lineHeight="25sp"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/inter_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>